--- a/TODO
+++ b/TODO
@@ -77,6 +77,7 @@ Completion (if not good enough via ale/coc/vim-go etc):
 - YouCompleteMe ?
 - Deoplete ?
   - Clean up deoplete section of vimrc, and either debug deoplete, or get a new completion plugin.
+- "Fuzzy" fzf-style search for possible completions is a must.
 
 ---
 
