--- a/TODO
+++ b/TODO
@@ -11,9 +11,11 @@ Install, set-up, and add to ./other-settings:
 
 ---
 
-Figure out how to get the fzf commandline to use a different highlight color for light backgrounds.
+Get toggle-colors to do xfce4 terminal palette as well!
 
 Could probably update the fzf reverse-i-search commandline feature to run on the first enter press (since the chdir feature has that functionality). Then you'll need a separate keybind to edit the command before running, but you could just use C-t or something for that.
+
+Figure out how to get the fzf commandline to use a different highlight color for light backgrounds.
 
 ---
 
@@ -45,20 +47,15 @@ Look at this line in TJ's vimrc:
 
 ---
 
-Think of a way to easily toggle between light theme and dark theme in xfce4-terminal/Vim/tmux/d-s-f etc.
-- for glare / outdoors / mood
-- Could possibly just be a short script that does a bunch of `sed`s. I see nothing especially wrong with this.
-
----
-
     Vim plugins to try:
     ===================
 
 tag management?
 - e.g., easytags?
+- ?: https://ricostacruz.com/til/navigate-code-with-ctags
 
 LSP (language server protocol) support:
-    ale
+    ale > syntastic !!
         " v suggested
         let g:ale_linters = {'go': ['gopls', 'goimports'], 'python': ['flake8', 'pylint'], 'javascript': ['flow-language-server'],}
         let g:ale_fixers = {'go': ['goimports']}
