--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ Important use case: go to uses of a function / type in Vim (easy if in the same 
 - Figure out what you need, and look for possible solutions.
 - Could use the keybind 'K' for go-to-uses
 - See also notes below re: slack convo.
+- See the 'Go To Defn' and 'Find References' sections of https://github.com/dense-analysis/ale
 
 Some guy from #vim on slack, re: preview window for fzf find:
 " junegunn/fzf.vim
@@ -39,50 +40,7 @@ tmux keybind: alt-shift-X
 
 ---
 
-ALE:
-    " V
-    let g:ale_linters = {'go': ['gopls', 'goimports'], 'python': ['flake8', 'pylint'], 'javascript': ['flow-language-server'],}
-    let g:ale_fixers = {'go': ['goimports']}
-    let g:ale_go_gometalinter_options = '--fast'
-    let g:terraform_align=1
-    let g:go_def_mode='gopls'
-    let g:go_info_mode='gopls'
-    let g:ale_fix_on_save = 1
-    let g:go_fmt_command = "goimports"
-
-    " TJ
-    let g:ale_linters = {
-            \ 'python': [ 'flake8' ],
-            \}
-    let g:ale_fixers = {
-            \ '*': [ 'remove_trailing_lines', 'trim_whitespace' ],
-            \ 'cpp': [ 'clang-format', 'remove_trailing_lines', 'trim_whitespace' ],
-            \ 'python': [ 'yapf' ],
-            \}
-    let g:ale_echo_msg_error_str = 'E'
-    let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
-    let g:ale_echo_msg_warning_str = 'W'
-    let g:ale_lint_on_text_changed = 'never'
-    let g:ale_linters_explicit = 1
-    let g:ale_set_quickfix = 0
-    let g:ale_sign_column_always = 0
-    let g:ale_open_list = 0
-    let g:ale_virtualenv_dir_names = ['.env', '.venv', 'env', 've-py3', 've', 'virtualenv', 'venv']
-    " let g:ale_echo_cursor = 0
-    " let g:ale_completion_enabled = 1
-    nmap <silent> <C-p> <Plug>(ale_previous_wrap)
-    nmap <silent> <C-n> <Plug>(ale_next_wrap)
-    nmap <leader>l :lop<CR>
-    nmap <leader>ss :ALEFix<CR>
-
-Deoplete
-- Get it working.
-- Clean up deoplete section of vimrc.
-- "Fuzzy" fzf-style search for possible completions is a must.
-
-Future: coc.nvim or nvim-lsp
-
----
+Ranger in vim instead of nerdtree.
 
 Debug complete-alias + git. See todos in `.bash_aliases`.
 
@@ -104,3 +62,5 @@ Why does my xfce+i3 take so long to load xfce4-panel?
 
 Make vim open files as read-only always by default, and then upon any command that would modify the file, lock the file as being written to (by unsetting readonly). This would solve the problem of opening a file just to look at (or even jumping to a defn in a file and then jumping back) in a vim session, then trying to actually *edit* that file later in another vim session (while the first session is still open). Really, this should just work in the obvious way.
 - This seems super obvious, so maybe there's already a plugin for this?
+
+Possible future additions to vim setup: coc.nvim or nvim-lsp
